fixed navbar spacing a little bit

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -35,6 +35,7 @@
     background-color: transparent;
     border: none;
     color: black;
+    padding: 5%;
     font-size: 1.3rem;
 }
  
@@ -62,6 +63,7 @@
     border: none;
     color: black;
     font-size: 1.3rem;
+    padding: 5%;
     text-decoration: none;
 }
 
